myapp-kubernetes/virtualservice-kubernetes/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway
  http:
  - match:
      - uri:
          prefix: /oauth2/
      - uri:
          prefix: /login/oauth2/
      - uri:
          prefix: /api/
      - uri:
          exact: /logout
      - uri:
          exact: /login
    route:
      - destination:
          host: rest-service
          port:
            number: 8080
  - match:
      - uri:
          prefix: /ws/
    route:
      - destination:
          host: websocket-service
          port:
            number: 8080
  - route:
      - destination:
          host: react-service
          port:
            number: 3000
